* Tue Nov 18 19:45:06 2003, pabs <pabs@pablotron.org>
  * initial import
  * added README
  * added ChangeLog

* Tue Nov 18 19:46:02 2003, pabs <pabs@pablotron.org>
  * removed old-id3.rb

* Tue Nov 18 19:47:49 2003, pabs <pabs@pablotron.org>
  * added TODO